# pmg-yew-quarantine-gui

./: .gitmodules  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  pmg-mobile-index.html.tt  pmg.css
debian/: changelog  control  copyright  rules
src/: mail_view.rs  main.rs  page_login.rs  page_mail_view.rs  page_not_found.rs  page_spam_list.rs  page_stack.rs  spam_list.rs  top_nav_bar.rs
