[package]
name = "pmg-quaratine-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
gloo-utils = "0.2"
lazy_static = "1.4"
yew = { version = "0.21",  features = ["csr"] }
yew-router = { version = "0.18" }
web-sys = { version = "0.3", features = [ "DomRect", "Element", "UrlSearchParams"] }
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"
log = "0.4.6"
wasm-logger = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
url = "2.1"
percent-encoding = "2.1"

proxmox-client = "0.5"
proxmox-schema = "4"
proxmox-uuid = "1"
proxmox-subscription = { version = "0.5", features = ["api-types"], default-features = false }

pwt = "0.5"
pwt-macros = "0.3"

proxmox-login = "0.2"
proxmox-yew-comp = { version = "0.4.5" }
