[package]
name = "pmg-mobile-quarantine-ui"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
gloo-utils = "0.2"
lazy_static = "1.4"
yew = { version = "0.21",  features = ["csr"] }
yew-router = { version = "0.18" }
web-sys = { version = "0.3", features = [ "DomRect", "Element", "UrlSearchParams"] }
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"
log = "0.4.6"
wasm-logger = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
url = "2.1"
percent-encoding = "2.1"

proxmox-client = "1"
proxmox-schema = "5"
proxmox-uuid = "1"
proxmox-subscription = { version = "1", features = ["api-types"], default-features = false }

pwt = "0.7"
pwt-macros = "0.5"

proxmox-login = "1"
proxmox-yew-comp = "0.6"
